WIP: trying to get font sizes correct on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,9 +173,9 @@ ul {
 }
 @media (max-width: 992px) {
   p, li, ul, ol {
-    font-size:1.2em;
+    font-size:1.4em;
   }
   h6 {
-    font-size:1.4em;
+    font-size:1.6em;
   }
 }
